tests/test_proof/bad/output/no_vars-conflict.catala_en.Proof
[ERROR] [A.y] At least two exceptions overlap for this variable:
 --> tests/test_proof/bad/no_vars-conflict.catala_en
  | 
8 |   context y content integer
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
